HotFix, UI improvements * Fix bug with keep style of step which throw error * Capitalize all letters * Align vertically all button captions

--- a/src/client/styles/common.css
+++ b/src/client/styles/common.css
@@ -40,6 +40,7 @@ button {
     right: 0;
     bottom: 0;
     margin: 0 auto;
+    line-height: 55px;
 
     color: white;
     background-color: #4ecdc4;
