--- a/src/client/styles/step4.css
+++ b/src/client/styles/step4.css
@@ -10,7 +10,7 @@
     height: 20%;
     background-color: #e74c3c;
     cursor: pointer;
-    font-size: 30px;
+    font-size: 40px;
 }
 
 .step_4_button__download {
